# P2Engine

./: .gitattributes  .gitignore  README.md  logging_disccusion_1.md  test.daml  todos_dones.txt
p2engine/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  daml.yaml  ledger.md  pyproject.toml
p2engine/agents/: README.md  __init__.py  agents.py  decorators.py  interfaces.py  persona_registry.py
p2engine/agents/impl/: human_in_loop_agent.py  llm_agent.py  rule_agent.py
p2engine/agents/templates/: system_message.j2
p2engine/cli/: __main__.py  _ui.py  agents.py  artifact.py  chat.py  config.py  conversation.py  eval.py  ledger.py  shell.py
p2engine/cli/handlers/: __init__.py  agent.py  artifacts.py  chat.py  config.py  conversation.py  eval.py  stack_watch.py
p2engine/cli/utils/: compat.py
p2engine/config/: agents.yml  canton.conf  config.json  connect.canton  demo_rollout.yml  json-api.conf  rollout_competitive_payment.yml  rollout_hierarchical_distribution.yml  rollout_joke.yml  rollout_task_with_payment.yml
p2engine/docs/: dedup.md  rollouts_stuff_and_more.md  todos_dones.txt
p2engine/infra/: README.md  async_utils.py  bootstrap.py  clock.py  config.py  config_loader.py  config_models.py  redis_repository.py  runtime.py  session.py  session_driver.py  side_effect_executor.py
p2engine/infra/artifacts/: bus.py  export.py  schema.py
p2engine/infra/clients/: llm_client.py  redis_client.py
p2engine/infra/evals/: __init__.py  aggregate.py  batcher.py  gpt4_judge.py  jinja_mixin.py  llm_eval.py  loader.py  metrics.py  registry.py  rubric_library.py
p2engine/infra/logging/: effect_log.py  interaction_log.py  logging_config.py  metrics.py
p2engine/infra/observability/: realtime_monitor.py  rerun_obs.py  rerun_rollout.py
p2engine/infra/utils/: llm_helpers.py  override_helpers.py  redis_helpers.py  redis_keys.py  session_helpers.py
p2engine/orchestrator/: README.md  registries.py
p2engine/orchestrator/interactions/: __init__.py  branch.py  render.py  render_policies.py  serializers.py  stack.py
p2engine/orchestrator/renderer/: template_manager.py
p2engine/orchestrator/schemas/: schemas.py
p2engine/runtime/: README.md  __init__.py  agent_runtime.py  constants.py  effects.py  engine.py  handlers.py  helpers.py  post_effects.py
p2engine/runtime/policies/: __init__.py  dedup.py
p2engine/runtime/rollout/: __init__.py  cli.py  engine.py  expander.py  spec.py  store.py
p2engine/runtime/task_runner/: __init__.py  agent_runner.py  constants.py
p2engine/runtime/tasks/: __init__.py  celery_app.py  delegate_bridge.py  evals.py  rollout_tasks.py  tasks.py
p2engine/scripts/: canton-health-check.sh  initialize_app.py  run_project.sh  setup_canton.sh  start_canton.sh
p2engine/services/: ledger_service.py  services.py
p2engine/tools/: README.md  __init__.py  constants.py  delegate_tool.py  league_tool.py  ledger_tools.py  weather_tool.py
projectdeux/: .gitignore  README.md  api.py  celery_app.py  daml.yaml  main.py  pyproject.toml  run_discovery.py  summary.html  test.py
projectdeux/arc/: arc2.ipynb  arc3.ipynb  arc4.ipynb  arc5.ipynb  arc_solver.py  circle.ipynb
projectdeux/archive/: example_outpout_agent_logger_svelte.html  supervisor_sync.yaml
projectdeux/configs/: customer_support.json  simple_agent.json
projectdeux/daml/: ControlFlow.daml  Functions.daml  HelloWorld.daml  Lab1.daml  Lab1point5.daml  Lab2.daml  Setup.daml  Test.daml
projectdeux/daml.js/projectdeux-0.1.0/: package.json
projectdeux/discovery/: architectures_01.md  architectures_20250305_104730.md  architectures_20250305_110827.md  architectures_20250305_163048.md  architectures_20250305_174257.md  architectures_20250305_180242.md  architectures_20250305_191219.md  architectures_20250306_012327.md  architectures_20250306_014959.md  architectures_20250306_021848.md  architectures_20250306_191657.md  architectures_20250307_031912.md  architectures_20250307_085040.md  meta_system_inventor.py  run_discovery.py
projectdeux/discovery/run1/: architectures_20250305_133840.md  architectures_20250305_161011.md  scenarioet.yaml  systemet.py
projectdeux/docs/: project_overview.md
projectdeux/src/: utils.py
projectdeux/src/agents/: base_agent.py  factory.py  log_analyzer_agent.py  states.py  states_advanced.py  supervisor_agent.py
projectdeux/src/config/: scenario.yaml  test_scenario.yaml
projectdeux/src/custom_logging/: central_logger.py  litellm_logger.py  simple_logger.py
projectdeux/src/entities/: component_manager.py  entity.py  entity_manager.py  smart_entity.py
projectdeux/src/multi_agent_systems/: goal_scenario.py  system_manager.py  (+2 more)
projectdeux/tests/: conftest.py  test_clarification_mechanism.py  test_composable_agent.py  test_configurable_workflow.py  test_error_handling.py  test_event_system.py  test_multi_agent.py  test_multi_agent_system.py  test_simple_agent.py  test_state_machine.py  test_state_refactor.py  test_sub_agent_workflow.py  test_tool_execution.py  test_transition_logging.py
projectdeux/ui/: craco.config.js  generate-tokens.js  package-lock.json  package.json  tsconfig.json
projectdeux/website/: index 22.48.33.html  index.html
projectdeux_mas/: main.py  pyproject.toml  test_llm.py
projectdeux_mas/src/: celery_app.py
(+222 files in other folders)
