[tool.poetry]
name = "p2engine"
version = "0.1.0"
description = "p2engine"
authors = ["Adam Sioud <adam.sioud@protonmail.com>"]

packages = [
  { include = "cli"          },
  { include = "agents"       },
  { include = "infra"        },
  { include = "orchestrator" },
  { include = "runtime"      },
  { include = "services"     },
  { include = "tools"        }
]
# ─────────────────────────────────────────────────────────────────────────────
# Runtime dependencies
# ─────────────────────────────────────────────────────────────────────────────
[tool.poetry.dependencies]
python               = "^3.9"
celery               = "^5.2.7"
redis                = "^4.3.4"
litellm              = "^1.6.0"
tenacity             = "^9.0.0"
pydantic             = "^2.11.1"
pydantic-settings    = "^2.8.1"
python-dotenv        = "^1.0.0"
requests             = "^2.28.0"
numpydoc             = "^1.8.0"
jinja2               = "^3.1.6"
pytz                 = "^2025.2"
meteostat            = "^1.6.8"
pyyaml               = "^6.0.2"
pyaml                = "^25.1.0"
aio-pika             = "^9.5.5"
omegaconf            = "^2.3.0"
scikit-learn         = "^1.6.1"
textdistance         = "^4.6.3"
gitpython            = "^3.1.44"
jsonschema           = "^4.23.0"
typer                = "^0.15.4"  
rich                 = "^14.0.0"   

# ─────────────────────────────────────────────────────────────────────────────
# Development / lint / test extras
# ─────────────────────────────────────────────────────────────────────────────
prompt-toolkit = "^3.0.51"
pyjwt = "^2.10.1"
[tool.poetry.group.dev.dependencies]
flake8    = "^7.1.2"
black     = "^25.1.0"
pre-commit = "^4.2.0"
pytest    = "^7.4.0"

# ─────────────────────────────────────────────────────────────────────────────
# Code-style
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 138
target-version = ["py310"]

# ─────────────────────────────────────────────────────────────────────────────
# Plug-in entry points (our dynamic agent & tool discovery)
# ─────────────────────────────────────────────────────────────────────────────
[tool.poetry.plugins."agents"]
llm            = "agents.impl.llm_agent:LLMAgent"
rule_based     = "agents.impl.rule_agent:RuleBasedAgent"
human_in_loop  = "agents.impl.human_in_loop_agent:HumanInLoopAgent"

[tool.poetry.plugins."tools"]
weather_tool   = "tools.weather_tool"

# ─────────────────────────────────────────────────────────────────────────────
# Console scripts generated by Poetry
# ─────────────────────────────────────────────────────────────────────────────
[tool.poetry.scripts]
smoke     = "scripts.dev_smoke:main"
p2engine = "cli.__main__:app"