[tool.poetry]
name = "projectdeux_mas"
version = "0.1.0"
description = "Final Iteration of Project Deux"
authors = ["Adam Sioud <adamtnno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.63.11"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
rerun-sdk = "^0.22.1"
lxml = "^4.9.2"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
selenium = "^4.8.0"  # if you're using Selenium fallback
celery = "^5.4.0"
fastapi = "^0.115.10"
redis = "^5.2.1"
scikit-learn = "^1.6.1"
tenacity = "^9.0.0"
pika = "^1.3.2"
aio-pika = "^9.5.5"